baml_language/crates/baml_tests/snapshots/diagnostic_errors/catch_return_type_mismatch/baml_tests__diagnostic_errors__catch_return_type_mismatch__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== PPIR ===
enum user.Errors {AuthenticationError, AuthorizationError, NotFoundError, InternalServerError}
function user.callee() -> bool  [expr] {
  { return true }
}
function user.caller() -> bool  [expr] {
  {  } callee() catch (e) { user.Errors.AuthenticationError => { return e } }
}
