baml_language/crates/baml_tests/snapshots/diagnostic_errors/catch_return_type_mismatch/baml_tests__diagnostic_errors__catch_return_type_mismatch__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
enum user.Errors
function user.callee() -> bool throws user.Errors {
  { : never
    return true : true
  }
  ?? 219..225: extraneous throws declaration: Errors
}
function user.caller() -> bool throws never {
  { : bool
    catch (callee() : bool) : bool
      catch (e)
        Errors.AuthenticationError =>
          { : never
            return e : user.Errors
          }
  }
  !! 458..459: type mismatch: expected bool, got Errors
}
