baml_language/crates/baml_tests/snapshots/diagnostic_errors/catch_return_type_mismatch/baml_tests__diagnostic_errors__catch_return_type_mismatch__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 27645
---
=== COMPILER2 DIAGNOSTICS ===
  [type] Warning: extraneous throws declaration: user.Errors
    ╭─[ catch_return_type_mismatch.baml:10:33 ]
    │
 10 │ function callee() -> bool throws Errors {
    │                                 ───┬───  
    │                                    ╰───── extraneous throws declaration: user.Errors
    │ 
    │ Note: Error code: E0097
────╯

  [type] Error: type mismatch: expected bool, got user.Errors
    ╭─[ catch_return_type_mismatch.baml:18:44 ]
    │
 18 │     Errors.AuthenticationError => { return e }
    │                                            ┬  
    │                                            ╰── type mismatch: expected bool, got user.Errors
    │ 
    │ Note: Error code: E0001
────╯
